feat: create layout

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,142 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <div class="borders parent">
+        <div class="square borders div1">
+          <div class="square-left borders">
+            <div class="borders square-left-inner">
+              <div class="title-s bold-2">Wind</div>
+              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div>
+                <span class="bold-1">Light</span><br>
+                <span>From</span><br>
+                <span class="bold-1">East</span>
+              </div>
+            </div>
+          </div>
+          <div class="square-right borders"></div>
+        </div>
+        <div class="borders div2"></div>
+        <div class="borders div3"></div>
+        <div class="borders div4">
+          <div class="borders rectangle-top">
+            <div class="borders rectangle-left">
+              <div class="borders buttons">
+                <button>Hourly</button><button>Wind</button
+                ><button>Precipitation</button>
+              </div>
+              <div class="borders daymax">
+                <span class="title-s">Day Max</span
+                ><span class="text-l4">20°</span>
+              </div>
+            </div>
+
+            <div class="borders rectangle-right"></div>
+          </div>
+          <div class="borders rectangle-bottom"></div>
+        </div>
+
+        <div class="square borders div5">
+          <div class="square-left borders">
+            <div class="borders square-left-inner">
+              <div class="title-s bold-2">Wind</div>
+              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div>
+                <span class="bold-1">Light</span><br>
+                <span>From</span><br>
+                <span class="bold-1">East</span>
+              </div>
+            </div>
+          </div>
+          <div class="square-right borders"></div>
+        </div>
+        <div class="square borders div6">
+          <div class="square-left borders">
+            <div class="borders square-left-inner">
+              <div class="title-s bold-2">Wind</div>
+              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div>
+                <span class="bold-1">Light</span><br>
+                <span>From</span><br>
+                <span class="bold-1">East</span>
+              </div>
+            </div>
+          </div>
+          <div class="square-right borders"></div>
+        </div>
+        <div class="square borders div7">
+          <div class="square-left borders">
+            <div class="borders square-left-inner">
+              <div class="title-s bold-2">Wind</div>
+              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div>
+                <span class="bold-1">Light</span><br>
+                <span>From</span><br>
+                <span class="bold-1">East</span>
+              </div>
+            </div>
+          </div>
+          <div class="square-right borders"></div>
+        </div>
+        <div class="square borders div8">
+          <div class="square-left borders">
+            <div class="borders square-left-inner">
+              <div class="title-s bold-2">Wind</div>
+              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div>
+                <span class="bold-1">Light</span><br>
+                <span>From</span><br>
+                <span class="bold-1">East</span>
+              </div>
+            </div>
+          </div>
+          <div class="square-right borders"></div>
+        </div>
+        <div class="square borders div9">
+          <div class="square-left borders">
+            <div class="borders square-left-inner">
+              <div class="title-s bold-2">Wind</div>
+              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div>
+                <span class="bold-1">Light</span><br>
+                <span>From</span><br>
+                <span class="bold-1">East</span>
+              </div>
+            </div>
+          </div>
+          <div class="square-right borders"></div>
+        </div>
+        <div class="square borders div10">
+          <div class="square-left borders">
+            <div class="borders square-left-inner">
+              <div class="title-s bold-2">Wind</div>
+              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div>
+                <span class="bold-1">Light</span><br>
+                <span>From</span><br>
+                <span class="bold-1">East</span>
+              </div>
+            </div>
+          </div>
+          <div class="square-right borders"></div>
+        </div>
+        <div class="square borders div11">
+          <div class="square-left borders">
+            <div class="borders square-left-inner">
+              <div class="title-s bold-2">Wind</div>
+              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div>
+                <span class="bold-1">Light</span><br>
+                <span>From</span><br>
+                <span class="bold-1">East</span>
+              </div>
+            </div>
+          </div>
+          <div class="square-right borders"></div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
