--- a/src/template.html
+++ b/src/template.html
@@ -24,8 +24,34 @@
           </div>
           <div class="square-right borders"></div>
         </div>
-        <div class="borders div2"></div>
-        <div class="borders div3"></div>
+        <div class="borders div2">
+          <div class="borders weather-icon">Icon</div>
+          <div class="borders current-data">
+            <div class="borders current-conditions">Partly cloudy</div>
+            <div class="borders current-temp text-l1 bold-3">20°</div>
+          </div>
+          <div class="borders alerts">Alert</div>
+        </div>
+        <div class="borders div3">
+          <div class="borders buttons-right">
+            <button>Tomorrow</button><button>Weekly</button>
+          </div>
+          <div class="borders forecast">
+            <div class="borders forecast-card">
+              <div class="borders forecast-card-title">01:00</div>
+              <div class="borders forecast-card-icon">Icon</div>
+              <div class="borders forecast-card-temp">15°</div>
+            </div>
+            <div class="borders weekly-card">
+              <div class="borders weekly-card-title">Tomorrow</div>
+              <div class="borders weekly-card-icon">Icon</div>
+              <div class="borders weekly-card-temps">
+                <div class="borders weekly-card-maxtemp">20°</div>
+                <div class="borders weekly-card-mintemp">10°</div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="borders div4">
           <div class="borders rectangle-top">
             <div class="borders rectangle-left">
@@ -35,24 +61,34 @@
               </div>
               <div class="borders daymax">
                 <span class="title-s">Day Max</span
-                ><span class="text-l4">20°</span>
+                ><span><span class="text-l4">20</span><span class="text-l4">°</span>mm<span></span>
               </div>
             </div>
 
-            <div class="borders rectangle-right"></div>
+            <div class="borders rectangle-right">
+              <div>Weather description</div>
+            </div>
           </div>
-          <div class="borders rectangle-bottom"></div>
+          <div class="borders rectangle-bottom">
+            <div class="borders card">
+              <div class="borders card-title bold-1">Now</div>
+              <div class="borders card-icon">Icon</div>
+              <div class="borders card-data bold-1">16°</div>
+            </div>
+            <div class="borders card"></div>
+            <div class="borders card"></div>
+          </div>
         </div>
 
         <div class="square borders div5">
           <div class="square-left borders">
             <div class="borders square-left-inner">
-              <div class="title-s bold-2">Wind</div>
-              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div class="title-s bold-2">Humidity</div>
+              <div><span class="text-2a bold-1">75</span><span>%</span></div>
               <div>
-                <span class="bold-1">Light</span><br>
-                <span>From</span><br>
-                <span class="bold-1">East</span>
+                <span class="bold-1">Moderate</span><br>
+                <span>Dewpoint</span><br>
+                <span class="bold-1">10°</span>
               </div>
             </div>
           </div>
@@ -61,12 +97,10 @@
         <div class="square borders div6">
           <div class="square-left borders">
             <div class="borders square-left-inner">
-              <div class="title-s bold-2">Wind</div>
-              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div class="title-s bold-2">Air Quality</div>
+              <div><span class="text-2a bold-1">63</span></div>
               <div>
-                <span class="bold-1">Light</span><br>
-                <span>From</span><br>
-                <span class="bold-1">East</span>
+                <span class="bold-1">Moderate</span>
               </div>
             </div>
           </div>
@@ -75,12 +109,12 @@
         <div class="square borders div7">
           <div class="square-left borders">
             <div class="borders square-left-inner">
-              <div class="title-s bold-2">Wind</div>
-              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div class="title-s bold-2">Precipitation</div>
+              <div><span class="text-2a bold-1">21</span><span>mm</span></div>
               <div>
                 <span class="bold-1">Light</span><br>
-                <span>From</span><br>
-                <span class="bold-1">East</span>
+                <span>Probability</span><br>
+                <span class="bold-1">75<span>%</span></span>
               </div>
             </div>
           </div>
@@ -89,12 +123,11 @@
         <div class="square borders div8">
           <div class="square-left borders">
             <div class="borders square-left-inner">
-              <div class="title-s bold-2">Wind</div>
-              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div class="title-s bold-2">Pressure</div>
+              <div><span class="text-2a bold-1">1024</span></div>
               <div>
-                <span class="bold-1">Light</span><br>
-                <span>From</span><br>
-                <span class="bold-1">East</span>
+                <span class="bold-1">hPa</span><br>
+                <span>High</span>
               </div>
             </div>
           </div>
@@ -103,12 +136,10 @@
         <div class="square borders div9">
           <div class="square-left borders">
             <div class="borders square-left-inner">
-              <div class="title-s bold-2">Wind</div>
-              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div class="title-s bold-2">UV Index</div>
+              <div><span class="text-2a bold-1">1</span></div>
               <div>
-                <span class="bold-1">Light</span><br>
-                <span>From</span><br>
-                <span class="bold-1">East</span>
+                <span class="bold-1">Low</span>
               </div>
             </div>
           </div>
@@ -117,12 +148,17 @@
         <div class="square borders div10">
           <div class="square-left borders">
             <div class="borders square-left-inner">
-              <div class="title-s bold-2">Wind</div>
-              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
               <div>
-                <span class="bold-1">Light</span><br>
-                <span>From</span><br>
-                <span class="bold-1">East</span>
+                <div class="title-s bold-2">Sunrise</div>
+                <div><span class="text-2a bold-1">06:55</span></div>
+              </div>
+              <div>
+                <div class="title-s bold-2">Sunset</div>
+                <div><span class="text-2a bold-1">17:00</span></div>
+              </div>
+              <div>
+                <div class="title-s bold-2">Moon Phase</div>
+                <div><span>Waning Crescent</span></div>
               </div>
             </div>
           </div>
@@ -131,12 +167,10 @@
         <div class="square borders div11">
           <div class="square-left borders">
             <div class="borders square-left-inner">
-              <div class="title-s bold-2">Wind</div>
+              <div class="title-s bold-2">Visibility</div>
               <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
               <div>
-                <span class="bold-1">Light</span><br>
-                <span>From</span><br>
-                <span class="bold-1">East</span>
+                <span class="bold-1">Good</span>
               </div>
             </div>
           </div>
