feat: add static weather data to last 4 squares

--- a/src/template.html
+++ b/src/template.html
@@ -129,7 +129,7 @@
           <div class="square-left borders">
             <div class="borders square-left-inner">
               <div class="title-s bold-2">Pressure</div>
-              <div><span class="text-2a bold-1">1024</span></div>
+              <div><span class="text-2a bold-1" id="current-pressure">1024</span></div>
               <div>
                 <span class="bold-1">hPa</span><br>
                 <span>High</span>
@@ -141,10 +141,10 @@
         <div class="square borders div9">
           <div class="square-left borders">
             <div class="borders square-left-inner">
-              <div class="title-s bold-2">UV Index</div>
-              <div><span class="text-2a bold-1">1</span></div>
+              <div class="title-s bold-2" >UV Index</div>
+              <div><span class="text-2a bold-1" id="current-uv-index">1</span></div>
               <div>
-                <span class="bold-1">Low</span>
+                <span class="bold-1" id="current-uv-scale">Low</span>
               </div>
             </div>
           </div>
@@ -155,15 +155,15 @@
             <div class="borders square-left-inner">
               <div>
                 <div class="title-s bold-2">Sunrise</div>
-                <div><span class="text-2a bold-1">06:55</span></div>
+                <div><span class="text-2a bold-1" id="sunrise">06:55</span></div>
               </div>
               <div>
                 <div class="title-s bold-2">Sunset</div>
-                <div><span class="text-2a bold-1">17:00</span></div>
+                <div><span class="text-2a bold-1" id="sunset">17:00</span></div>
               </div>
               <div>
                 <div class="title-s bold-2">Moon Phase</div>
-                <div><span>Waning Crescent</span></div>
+                <div><span id="current-moon-phase">Waning Crescent</span></div>
               </div>
             </div>
           </div>
@@ -173,9 +173,9 @@
           <div class="square-left borders">
             <div class="borders square-left-inner">
               <div class="title-s bold-2">Visibility</div>
-              <div><span class="text-2a bold-1">21</span><span>km/h</span></div>
+              <div><span class="text-2a bold-1" id="current-visibility">21 </span><span i>km</span></div>
               <div>
-                <span class="bold-1">Good</span>
+                <span class="bold-1" id="current-visibility-scale">Good</span>
               </div>
             </div>
           </div>
