feat: create hourly cards

--- a/src/template.html
+++ b/src/template.html
@@ -74,14 +74,7 @@
               <div id="current-description">Weather description</div>
             </div>
           </div>
-          <div class="borders rectangle-bottom">
-            <div class="borders card">
-              <div class="borders card-title bold-1">Now</div>
-              <div class="borders card-icon">Icon</div>
-              <div class="borders card-data bold-1">16°</div>
-            </div>
-            <div class="borders card"></div>
-            <div class="borders card"></div>
+          <div class="borders rectangle-bottom" id="hourly-cards-container">
           </div>
         </div>
 
