feat: separate render functions  from data fetching functions

--- a/src/template.html
+++ b/src/template.html
@@ -61,8 +61,8 @@
           <div class="borders rectangle-top">
             <div class="borders rectangle-left">
               <div class="borders buttons">
-                <button>Hourly</button><button>Wind</button
-                ><button>Precipitation</button>
+                <button id="hourly-btn">Hourly</button><button id="wind-btn">Wind</button
+                ><button id="precip-btn">Precipitation</button>
               </div>
               <div class="borders daymax">
                 <span class="title-s">Day Max</span
