feat: add layout elements for current temp and feelslike

--- a/src/template.html
+++ b/src/template.html
@@ -32,8 +32,12 @@
           <div class="borders weather-icon" ><img id="current-icon"></div>
           <div class="borders current-data">
             <div class="borders current-conditions" id="current-conditions"></div><div class="current-temps">
-            <div class="borders current-temp text-l1 bold-3" id="current-temp">20°</div>
-     <div class="borders current-temp text-l1 bold-3" id="current-feelslike">20°</div></div>
+<div id="temp">
+<div>Temperature</div>
+            <div class="borders current-temp text-l1 bold-3" id="current-temp">20°</div></div>
+<div id="feelslike">
+<div>Feels like</div>
+     <div class="borders current-temp text-l1 bold-3" id="current-feelslike">20°</div></div></div>
           </div>
           <div class="borders alerts" id="current-alerts"></div>
         </div>
