feat: render maximum wind speed

--- a/src/template.html
+++ b/src/template.html
@@ -70,7 +70,7 @@
               </div>
               <div class="borders daymax">
                 <span class="title-s">Day Max</span
-                ><span><span class="text-l4" id="day-max"></span><span class="text-l4">°</span>in<span></span>
+                ><span><span class="text-l4" id="day-max"></span><span class="text-l4" id="dayMaxDegree">°</span ><span id="dayMaxUnit"></span>
               </div>
             </div>
 
