feat: render weekly and tomorrow's forecast cards

--- a/src/template.html
+++ b/src/template.html
@@ -43,11 +43,11 @@
         </div>
         <div class="borders div3">
           <div class="borders buttons-right">
-            <button>Tomorrow</button><button>Weekly</button>
+            <button id="tomorrow-btn">Tomorrow</button><button id="weekly-btn">Weekly</button>
           </div>
-          <div class="borders forecast">
+          <div class="borders forecast" id="forecast">
             <div class="borders forecast-card">
-              <div class="borders forecast-card-title">01:00</div>
+              <div class="borders forecast-card-title" id="forecast-card-title">01:00</div>
               <div class="borders forecast-card-icon">Icon</div>
               <div class="borders forecast-card-temp">15°</div>
             </div>
