feat: add pressure description

--- a/src/template.html
+++ b/src/template.html
@@ -114,7 +114,7 @@
               <div class="title-s bold-2">Precipitation</div>
               <div><span class="text-2a bold-1" id="current-precipitation">21</span><span>in</span></div>
               <div>
-                <span class="bold-1" id="current-recip-intensity">CHANGELight</span><br>
+                <span class="bold-1" id="current-precip-intensity"></span><br>
                 <span>Probability</span><br>
                 <span class="bold-1" id="current-precip-prob">75<span>%</span></span>
               </div>
@@ -129,7 +129,7 @@
               <div><span class="text-2a bold-1" id="current-pressure">1024</span></div>
               <div>
                 <span class="bold-1">hPa</span><br>
-                <span>CHANGEHigh</span>
+                <span id="current-pressure-desc"></span>
               </div>
             </div>
           </div>
