feat: add degree symbol to hourly cards

--- a/src/template.html
+++ b/src/template.html
@@ -34,10 +34,10 @@
             <div class="borders current-conditions" id="current-conditions"></div><div class="current-temps">
 <div id="temp">
 <div>Temperature</div>
-            <div class="borders current-temp text-l1 bold-3" id="current-temp">20°</div></div>
+            <div class="borders current-temp text-l1 bold-3" id="current-temp"></div></div>
 <div id="feelslike">
 <div>Feels like</div>
-     <div class="borders current-temp text-l1 bold-3" id="current-feelslike">20°</div></div></div>
+     <div class="borders current-temp text-l1 bold-3" id="current-feelslike"></div></div></div>
           </div>
           <div class="borders alerts" id="current-alerts"></div>
         </div>
@@ -111,8 +111,8 @@
         <div class="square borders div7">
           <div class="square-left borders">
             <div class="borders square-left-inner">
-              <div class="title-s bold-2">Precipitation</div>
-              <div><span class="text-2a bold-1" id="current-precipitation">21</span><span>in</span></div>
+              <div class="title-s bold-2"></div>
+              <div><span class="text-2a bold-1" id="current-precipitation"></span><span>in</span></div>
               <div>
                 <span class="bold-1" id="current-precip-intensity"></span><br>
                 <span>Probability</span><br>
@@ -160,7 +160,7 @@
               </div>
               <div>
                 <div class="title-s bold-2">Moon Phase</div>
-                <div><span id="current-moon-phase">CHANGEWaning Crescent</span></div>
+                <div><span id="current-moon-phase"></span></div>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
               <div class="title-s bold-2">Visibility</div>
               <div><span class="text-2a bold-1" id="current-visibility"> </span><span i>miles</span></div>
               <div>
-                <span class="bold-1" id="current-visibility-scale">Good</span>
+                <span class="bold-1" id="current-visibility-scale"></span>
               </div>
             </div>
           </div>
