--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
             <div class="borders square-left-inner">
               <div class="title-s bold-2">Wind</div>
               <div><span class="text-2a bold-1" id="current-wind-speed"></span><span class="square-unit" id="current-wind-speed-unit">mph</span></div>
-              <div>
+              <div id="wind-data">
                 <span class="bold-1" id="current-wind-scale"></span><br>
                 <span>From</span><br>
                 <span class="bold-1" id="current-wind-dir"></span>
@@ -159,10 +159,10 @@
                 <div class="title-s bold-2">Sunset</div>
                 <div><span class="text-2a bold-1" id="sunset"></span></div>
               </div>
-              <div>
+              <!--<div>
                 <div class="title-s bold-2">Moon Phase</div>
                 <div><span id="current-moon-phase"></span></div>
-              </div>
+              </div>-->
             </div>
           </div>
           <div class="square-right borders"></div>
