fix: restore moon phase

--- a/src/template.html
+++ b/src/template.html
@@ -151,10 +151,10 @@
                 <div class="title-s bold-2">Sunset</div>
                 <div><span class="text-2a bold-1" id="sunset"></span></div>
               </div>
-              <!--<div>
+              <div>
                 <div class="title-s bold-2">Moon Phase</div>
                 <div><span id="current-moon-phase"></span></div>
-              </div>-->
+              </div>
             </div>
           </div>
           <div class="square-right"></div>
