feat: configure webpack dev and prod modes

--- a/src/template.html
+++ b/src/template.html
@@ -41,7 +41,7 @@
      <div class="current-temp text-l1 bold-3" id="current-feelslike"></div></div></div>
           </div>
           <div class="alerts" id="current-alerts"></div>
-   <div class="current-location bold-3" id="current-location"></div>
+   <div class="current-location bold-3 text-l6" id="current-location"></div>
         </div>
         <div class="div3">
           <div class="buttons-right">
